if (WIN32 AND MSVC)
    set(ENV{BOOST_ROOT} "D:/Develop/Source/boost_1_61_0") 
    set(ENV{BOOST_LIBRARYDIR} "D:/Develop/Source/boost_1_61_0/bin.v2/libs")
endif()
find_package(Boost REQUIRED COMPONENTS filesystem)
if(Boost_FOUND)
    include_directories(${Boost_INCLUDE_DIRS})
add_executable(fileSystem source/boost/fileSystem.cpp)
target_link_libraries(fileSystem ${Boost_LIBRARIES})
endif()
